update install cell, rerun sequentially

--- a/code/04_fit_light_curves.ipynb
+++ b/code/04_fit_light_curves.ipynb
@@ -20,10 +20,11 @@
     "    conda create -n tensorflow_env tensorflow\n",
     "    conda activate tensorflow_env\n",
     "\n",
-    "Then in that activated environment we can install `ipython` as well as `celerite` : \n",
+    "Then in that activated environment we can install `ipython`, `jupyter`, as well as `celerite` : \n",
     "\n",
     "    conda install ipython\n",
     "    conda install -c conda-forge numpy pybind11 autograd\n",
+    "    conda install -c conda-forge celerite\n",
     "    conda install jupyter\n",
     "\n",
     "Then start the jupyter notebook in the directory containing this notebook (i.e. `04_fit_light_curves`) :\n",
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "28fb36a8",
    "metadata": {},
    "outputs": [
@@ -58,43 +59,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting matplotlib\n",
-      "  Obtaining dependency information for matplotlib from https://files.pythonhosted.org/packages/7e/2c/1e25437f4419f2828bbd213be42c8fd23a3b795c5c4bb776987d177fc615/matplotlib-3.7.2-cp311-cp311-macosx_10_12_x86_64.whl.metadata\n",
-      "  Downloading matplotlib-3.7.2-cp311-cp311-macosx_10_12_x86_64.whl.metadata (5.6 kB)\n",
-      "Collecting contourpy>=1.0.1 (from matplotlib)\n",
-      "  Obtaining dependency information for contourpy>=1.0.1 from https://files.pythonhosted.org/packages/92/4d/fe7a7098d98a8889252105193f5e869532f9dc37e39d917a82d2b0b874a1/contourpy-1.1.0-cp311-cp311-macosx_10_9_x86_64.whl.metadata\n",
-      "  Downloading contourpy-1.1.0-cp311-cp311-macosx_10_9_x86_64.whl.metadata (5.7 kB)\n",
-      "Collecting cycler>=0.10 (from matplotlib)\n",
-      "  Downloading cycler-0.11.0-py3-none-any.whl (6.4 kB)\n",
-      "Collecting fonttools>=4.22.0 (from matplotlib)\n",
-      "  Obtaining dependency information for fonttools>=4.22.0 from https://files.pythonhosted.org/packages/48/ae/43993b3561dca4cf2d18c24c53ce7e2fbba4e3a7d42950ca8f1aaa210590/fonttools-4.42.1-cp311-cp311-macosx_10_9_x86_64.whl.metadata\n",
-      "  Downloading fonttools-4.42.1-cp311-cp311-macosx_10_9_x86_64.whl.metadata (150 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m151.0/151.0 kB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting kiwisolver>=1.0.1 (from matplotlib)\n",
-      "  Obtaining dependency information for kiwisolver>=1.0.1 from https://files.pythonhosted.org/packages/a6/94/695922e71288855fc7cace3bdb52edda9d7e50edba77abb0c9d7abb51e96/kiwisolver-1.4.5-cp311-cp311-macosx_10_9_x86_64.whl.metadata\n",
-      "  Downloading kiwisolver-1.4.5-cp311-cp311-macosx_10_9_x86_64.whl.metadata (6.4 kB)\n",
+      "Requirement already satisfied: matplotlib in /Users/chris/anaconda3/envs/tensorflow_env/lib/python3.11/site-packages (3.7.2)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /Users/chris/anaconda3/envs/tensorflow_env/lib/python3.11/site-packages (from matplotlib) (1.1.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/chris/anaconda3/envs/tensorflow_env/lib/python3.11/site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/chris/anaconda3/envs/tensorflow_env/lib/python3.11/site-packages (from matplotlib) (4.42.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/chris/anaconda3/envs/tensorflow_env/lib/python3.11/site-packages (from matplotlib) (1.4.5)\n",
       "Requirement already satisfied: numpy>=1.20 in /Users/chris/anaconda3/envs/tensorflow_env/lib/python3.11/site-packages (from matplotlib) (1.23.5)\n",
       "Requirement already satisfied: packaging>=20.0 in /Users/chris/anaconda3/envs/tensorflow_env/lib/python3.11/site-packages (from matplotlib) (23.0)\n",
-      "Collecting pillow>=6.2.0 (from matplotlib)\n",
-      "  Obtaining dependency information for pillow>=6.2.0 from https://files.pythonhosted.org/packages/7a/54/f6a14d95cba8ff082c550d836c9e5c23f1641d2ac291c23efe0494219b8c/Pillow-10.0.0-cp311-cp311-macosx_10_10_x86_64.whl.metadata\n",
-      "  Downloading Pillow-10.0.0-cp311-cp311-macosx_10_10_x86_64.whl.metadata (9.5 kB)\n",
-      "Collecting pyparsing<3.1,>=2.3.1 (from matplotlib)\n",
-      "  Downloading pyparsing-3.0.9-py3-none-any.whl (98 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m98.3/98.3 kB\u001b[0m \u001b[31m5.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: python-dateutil>=2.7 in /Users/chris/anaconda3/envs/tensorflow_env/lib/python3.11/site-packages (from matplotlib) (2.8.2)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/chris/anaconda3/envs/tensorflow_env/lib/python3.11/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
-      "Downloading matplotlib-3.7.2-cp311-cp311-macosx_10_12_x86_64.whl (7.4 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.4/7.4 MB\u001b[0m \u001b[31m8.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hDownloading contourpy-1.1.0-cp311-cp311-macosx_10_9_x86_64.whl (243 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m243.5/243.5 kB\u001b[0m \u001b[31m6.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading fonttools-4.42.1-cp311-cp311-macosx_10_9_x86_64.whl (2.2 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.2/2.2 MB\u001b[0m \u001b[31m8.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hDownloading kiwisolver-1.4.5-cp311-cp311-macosx_10_9_x86_64.whl (68 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m68.2/68.2 kB\u001b[0m \u001b[31m5.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading Pillow-10.0.0-cp311-cp311-macosx_10_10_x86_64.whl (3.4 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.4/3.4 MB\u001b[0m \u001b[31m8.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: pyparsing, pillow, kiwisolver, fonttools, cycler, contourpy, matplotlib\n",
-      "Successfully installed contourpy-1.1.0 cycler-0.11.0 fonttools-4.42.1 kiwisolver-1.4.5 matplotlib-3.7.2 pillow-10.0.0 pyparsing-3.0.9\n"
+      "Requirement already satisfied: pillow>=6.2.0 in /Users/chris/anaconda3/envs/tensorflow_env/lib/python3.11/site-packages (from matplotlib) (10.0.0)\n",
+      "Requirement already satisfied: pyparsing<3.1,>=2.3.1 in /Users/chris/anaconda3/envs/tensorflow_env/lib/python3.11/site-packages (from matplotlib) (3.0.9)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/chris/anaconda3/envs/tensorflow_env/lib/python3.11/site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/chris/anaconda3/envs/tensorflow_env/lib/python3.11/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n"
      ]
     }
    ],
@@ -104,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "850ef262-9fee-4685-9a6b-d7c1b579d22f",
    "metadata": {},
    "outputs": [
@@ -112,19 +87,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting astropy\n",
-      "  Obtaining dependency information for astropy from https://files.pythonhosted.org/packages/14/f4/337aacc8138cf66f434ca26a06f3bc9c692b924aae5fe7117a12713028b2/astropy-5.3.2-cp311-cp311-macosx_10_9_x86_64.whl.metadata\n",
-      "  Downloading astropy-5.3.2-cp311-cp311-macosx_10_9_x86_64.whl.metadata (9.4 kB)\n",
+      "Requirement already satisfied: astropy in /Users/chris/anaconda3/envs/tensorflow_env/lib/python3.11/site-packages (5.3.2)\n",
       "Requirement already satisfied: numpy>=1.21 in /Users/chris/anaconda3/envs/tensorflow_env/lib/python3.11/site-packages (from astropy) (1.23.5)\n",
-      "Collecting pyerfa>=2.0 (from astropy)\n",
-      "  Downloading pyerfa-2.0.0.3-cp311-cp311-macosx_10_9_x86_64.whl (342 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m342.1/342.1 kB\u001b[0m \u001b[31m4.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: PyYAML>=3.13 in /Users/chris/anaconda3/envs/tensorflow_env/lib/python3.11/site-packages (from astropy) (6.0.1)\n",
-      "Requirement already satisfied: packaging>=19.0 in /Users/chris/anaconda3/envs/tensorflow_env/lib/python3.11/site-packages (from astropy) (23.0)\n",
-      "Downloading astropy-5.3.2-cp311-cp311-macosx_10_9_x86_64.whl (7.1 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.1/7.1 MB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: pyerfa, astropy\n",
-      "Successfully installed astropy-5.3.2 pyerfa-2.0.0.3\n"
+      "Requirement already satisfied: pyerfa>=2.0 in /Users/chris/anaconda3/envs/tensorflow_env/lib/python3.11/site-packages (from astropy) (2.0.0.3)\n",
+      "Requirement already satisfied: PyYAML>=3.13 in /Users/chris/anaconda3/envs/tensorflow_env/lib/python3.11/site-packages (from astropy) (6.0.1)\n",
+      "Requirement already satisfied: packaging>=19.0 in /Users/chris/anaconda3/envs/tensorflow_env/lib/python3.11/site-packages (from astropy) (23.0)\n"
      ]
     }
    ],
@@ -142,12 +109,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "7717599b-3f3c-475f-bf50-67c2af81c127",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np \n",
     "import celerite\n",
@@ -177,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "4e1bfbe6-f3d7-4b4f-9ded-41f8822241fe",
    "metadata": {
     "scrolled": true
@@ -230,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "f8047ec7-b4c2-4c6b-a9ed-f27e59f37593",
    "metadata": {},
    "outputs": [
@@ -240,7 +216,7 @@
        "dict_keys(['ZTF_filename', 'SDSS_JID', 'SDSS_dbID', 'ztf_original', 'ztf_synthetic', 'sdss', 'ps1', 'Nsigma'])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 6,
    "id": "7176d445-80f2-4e7e-bcd7-e3dfbe0234cf",
    "metadata": {},
    "outputs": [],
@@ -317,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "id": "a114338f-0621-45ad-bc84-a9771cdc93bd",
    "metadata": {},
    "outputs": [
@@ -359,17 +335,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 8,
    "id": "09d68b1d-ca3e-41ac-9501-4699cb389a01",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x132cca810>"
+       "<matplotlib.legend.Legend at 0x12d0d0190>"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -414,17 +390,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 9,
    "id": "e7bd34ac-86a8-47d1-bd25-938f72cfdc46",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x132f13950>"
+       "<matplotlib.legend.Legend at 0x12d3a2910>"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -469,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "d1a132c0-3198-412b-94a9-ea4673fa6307",
    "metadata": {},
    "outputs": [],
@@ -481,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 11,
    "id": "090430db-a694-49e1-b600-fb9c69bbce27",
    "metadata": {},
    "outputs": [],
@@ -564,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 12,
    "id": "074c4469-5257-4c34-8047-620fe67edcfa",
    "metadata": {},
    "outputs": [
@@ -593,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 13,
    "id": "fa0384c0-427d-4e05-84c7-f48cb1d281ba",
    "metadata": {},
    "outputs": [
@@ -632,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 14,
    "id": "c0c0d119-2817-4b99-82da-cd01d26200a4",
    "metadata": {},
    "outputs": [
@@ -660,14 +636,6 @@
     "fit_with_celerite(t=lc2['t'], y=lc2['y'], yerr = lc2['yerr'], xlims=ax0.get_xlim(), ylims=ax0.get_ylim(),\n",
     "                 use_bounds=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1266b99d-0884-4c15-9fa0-6a6ced57e5d7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
